@@ -1,1 +1,1 @@
-#define VERSION		"1.6"
+#define VERSION		"2.0"
